syntax = "proto3";
package com.google.startupos.proto_vs_json;

option java_package = "com.google.startupos.proto_vs_json";
option java_outer_classname = "Protos";

message Book {
  string name = 1;
  string author = 2;
}

message Person {
  enum PizzaTopping {
    PIZZA_TOPPING_NOT_SET = 0;
    PEPPERONI = 1;
    MUSHROOMS = 2;
    ONIONS = 3;
    BACON = 4;
    EXTRA_CHEESE = 5;
    BLACK_OLIVES = 6;
    GREEN_PEPPERS = 7;
    PINEAPPLE = 8;
  }

  string name = 1;
  string favorite_beatles_song = 2;
  int32 lucky_number = 3;
  repeated PizzaTopping favorite_pizza_topping = 4;
  repeated Book book_read = 5;
}
